// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function captures a bucket 1`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME__Bucket\\"]);
async function $proc($cap, event) {
        console.log(\\"Hello, \\" + event.name);
        // TODO: fix this
        await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
      }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a bucket 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function_IamRole_56665C88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function_IamRolePolicy_BD322466\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.app_Bucket_713D3F89.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.app_Bucket_713D3F89.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function_IamRolePolicyAttachment_B4E996A7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function_C48386A8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME__Bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function_S3Object_3291715D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Bucket_713D3F89\\": {},
      \\"app_Function_Bucket_1EEC349E\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"app_Bucket_PublicAccessBlock_79708F67\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"app_Bucket_Encryption_0E215A87\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"app_Function_S3Object_3291715D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures a function 1`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Event: \\" + JSON.stringify(event));
          return { greeting: \\"Hello, \\" + event.name + \\"!\\" };
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a function 2`] = `
"const $cap = {};
$cap[\\"function\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME__Function1\\"]);
async function $proc($cap, event) {
          console.log(\\"Event: \\" + JSON.stringify(event));
          const data = await $cap.function.invoke(JSON.stringify({ name: \\"world\\" }));
          console.log(\\"Greeting: \\" + data.value().greeting);
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a function 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function1_IamRole_8B35FB12\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"app_Function2_IamRole_61023C2E\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function1_IamRolePolicy_B0483EBA\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function1_IamRole_8B35FB12.name}\\"
      },
      \\"app_Function2_IamRolePolicy_370D274A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"lambda:InvokeFunction\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_lambda_function.app_Function1_4EDEB130.arn}\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function2_IamRole_61023C2E.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function1_IamRolePolicyAttachment_4A42A478\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function1_IamRole_8B35FB12.name}\\"
      },
      \\"app_Function2_IamRolePolicyAttachment_B29A8DCB\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function2_IamRole_61023C2E.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function1_4EDEB130\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1\\"
          }
        },
        \\"function_name\\": \\"Function1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function1_IamRole_8B35FB12.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function1_Bucket_DA681D6B.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function1_S3Object_41F4F0B5.key}\\"
      },
      \\"app_Function2_A2AFC7AD\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"FUNCTION_NAME__Function1\\": \\"\${aws_lambda_function.app_Function1_4EDEB130.arn}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2\\"
          }
        },
        \\"function_name\\": \\"Function2\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function2_IamRole_61023C2E.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function2_Bucket_24C50146.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function2_S3Object_EF881663.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Function1_Bucket_DA681D6B\\": {},
      \\"app_Function2_Bucket_24C50146\\": {}
    },
    \\"aws_s3_object\\": {
      \\"app_Function1_S3Object_41F4F0B5\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function1_Bucket_DA681D6B.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"app_Function2_S3Object_EF881663\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function2_Bucket_24C50146.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures a queue 1`] = `
"const $cap = {};
$cap[\\"queue\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/queue.inflight.ts\\")).QueueClient(process.env[\\"QUEUE_URL__Queue\\"]);
async function $proc($cap) {
          await $cap.queue.push(JSON.stringify({ name: \\"Alice\\" }));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures a queue 2`] = `
"const $cap = {};
async function $proc($cap, event) {
          console.log(\\"Received \\" + event.name);
        }
async function $sqsEventWrapper($cap, event) {
  for (const record of event.Records ?? []) {
    await $proc($cap, record.body);
  }
}
exports.handler = async function(event) {
  return await $sqsEventWrapper($cap, event);
};"
`;

exports[`function captures a queue 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function_IamRole_56665C88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"app_Queue_OnMessagecbf6dee05a035c28_IamRole_2AC7A86F\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function_IamRolePolicy_BD322466\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:SendMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.app_Queue_9247899E.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      },
      \\"app_Queue_OnMessagecbf6dee05a035c28_IamRolePolicy_1E840995\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.app_Queue_9247899E.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Queue_OnMessagecbf6dee05a035c28_IamRole_2AC7A86F.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function_IamRolePolicyAttachment_B4E996A7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      },
      \\"app_Queue_OnMessagecbf6dee05a035c28_IamRolePolicyAttachment_35F21939\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Queue_OnMessagecbf6dee05a035c28_IamRole_2AC7A86F.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"app_Queue_EventSourceMapping_A3B51A47\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.app_Queue_9247899E.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.app_Queue_OnMessagecbf6dee05a035c28_4E344F2F.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function_C48386A8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"QUEUE_URL__Queue\\": \\"\${aws_sqs_queue.app_Queue_9247899E.url}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function_S3Object_3291715D.key}\\"
      },
      \\"app_Queue_OnMessagecbf6dee05a035c28_4E344F2F\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"OnMessage-cbf6dee05a035c28\\"
          }
        },
        \\"function_name\\": \\"OnMessage-cbf6dee05a035c28\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Queue_OnMessagecbf6dee05a035c28_IamRole_2AC7A86F.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Queue_OnMessagecbf6dee05a035c28_Bucket_A348633A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Queue_OnMessagecbf6dee05a035c28_S3Object_43A6FCAB.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Function_Bucket_1EEC349E\\": {},
      \\"app_Queue_OnMessagecbf6dee05a035c28_Bucket_A348633A\\": {}
    },
    \\"aws_s3_object\\": {
      \\"app_Function_S3Object_3291715D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"app_Queue_OnMessagecbf6dee05a035c28_S3Object_43A6FCAB\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Queue_OnMessagecbf6dee05a035c28_Bucket_A348633A.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"app_Queue_9247899E\\": {}
    }
  }
}"
`;

exports[`function captures primitive values 1`] = `
"const $cap = {};
$cap[\\"num\\"] = 5;
$cap[\\"string\\"] = \\"world\\";
$cap[\\"bool\\"] = true;
$cap[\\"nothing\\"] = null;
async function $proc($cap, event) {
        console.log(\\"Hello, \\" + $cap.string);
        console.log(\\"My favorite number is \\" + $cap.num);
        console.log(\\"Is it raining? \\" + $cap.bool);
        console.log($cap.nothing + \\" hypothesis\\");
      }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures primitive values 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function_IamRole_56665C88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function_IamRolePolicy_BD322466\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function_IamRolePolicyAttachment_B4E996A7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function_C48386A8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function_S3Object_3291715D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Function_Bucket_1EEC349E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"app_Function_S3Object_3291715D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function captures structured values 1`] = `
"const $cap = {};
$cap[\\"map\\"] = {\\"hello\\":\\"world\\",\\"boom\\":{\\"bam\\":123}};
$cap[\\"list\\"] = [1,2,\\"thing\\"];
async function $proc($cap, event) {
          console.log(\\"Map: \\" + JSON.stringify($cap.map));
          console.log(\\"List: \\" + JSON.stringify($cap.list));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`function captures structured values 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function_IamRole_56665C88\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function_IamRolePolicy_BD322466\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function_IamRolePolicyAttachment_B4E996A7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function_C48386A8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function\\"
          }
        },
        \\"function_name\\": \\"Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function_IamRole_56665C88.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function_S3Object_3291715D.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Function_Bucket_1EEC349E\\": {}
    },
    \\"aws_s3_object\\": {
      \\"app_Function_S3Object_3291715D\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function_Bucket_1EEC349E.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`two functions reusing the same inflight 1`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME__Bucket\\"]);
async function $proc($cap, event) {
          console.log(\\"Hello, \\" + event.name);
          await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`two functions reusing the same inflight 2`] = `
"const $cap = {};
$cap[\\"bucket\\"] = new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME__Bucket\\"]);
async function $proc($cap, event) {
          console.log(\\"Hello, \\" + event.name);
          await $cap.bucket.put(\\"hello.txt\\", JSON.stringify(event));
        }
exports.handler = async function(event) {
  return await $proc($cap, event);
};"
`;

exports[`two functions reusing the same inflight 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"app_Function1_IamRole_8B35FB12\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"app_Function2_IamRole_61023C2E\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"app_Function1_IamRolePolicy_B0483EBA\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.app_Bucket_713D3F89.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.app_Bucket_713D3F89.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function1_IamRole_8B35FB12.name}\\"
      },
      \\"app_Function2_IamRolePolicy_370D274A\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.app_Bucket_713D3F89.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.app_Bucket_713D3F89.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.app_Function2_IamRole_61023C2E.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"app_Function1_IamRolePolicyAttachment_4A42A478\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function1_IamRole_8B35FB12.name}\\"
      },
      \\"app_Function2_IamRolePolicyAttachment_B29A8DCB\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.app_Function2_IamRole_61023C2E.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"app_Function1_4EDEB130\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME__Bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function1\\"
          }
        },
        \\"function_name\\": \\"Function1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function1_IamRole_8B35FB12.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function1_Bucket_DA681D6B.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function1_S3Object_41F4F0B5.key}\\"
      },
      \\"app_Function2_A2AFC7AD\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME__Bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2\\"
          }
        },
        \\"function_name\\": \\"Function2\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.app_Function2_IamRole_61023C2E.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.app_Function2_Bucket_24C50146.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.app_Function2_S3Object_EF881663.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"app_Bucket_713D3F89\\": {},
      \\"app_Function1_Bucket_DA681D6B\\": {},
      \\"app_Function2_Bucket_24C50146\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"app_Bucket_PublicAccessBlock_79708F67\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"app_Bucket_Encryption_0E215A87\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Bucket_713D3F89.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"app_Function1_S3Object_41F4F0B5\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function1_Bucket_DA681D6B.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"app_Function2_S3Object_EF881663\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.app_Function2_Bucket_24C50146.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
